Security: Remove credentials file and update .gitignore
- Remove Google Cloud Service Account credentials from tracking
- Add comprehensive .gitignore rules for sensitive files
- Prepare for secure credential handling in deployment

--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,16 @@ Thumbs.db
 instance/
 .webassets-cache
 .env
+
+# Security - Google Cloud credentials and sensitive files
+phonic-goods-317118-*.json
+*-credentials.json
+*service-account*.json
+google-credentials.json
+service-account-key.json
+credentials/
+secrets/
+
+# Application logs
+logs/
+*.log
