Security: Migrate Google Cloud credentials to environment variables
- Deconstructed JSON credentials into individual environment variables
- Updated config.py to use environment-based credentials
- Modified app.py to construct credentials from env vars
- Enhanced .gitignore to prevent credential files
- Updated deployment configs (docker-compose.yml)
- Added security migration guide
- Removed all credential files from codebase

 No more credential files in version control
 Environment-specific configuration support
 Better security practices implemented

--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,8 @@ google-credentials.json
 service-account-key.json
 credentials/
 secrets/
+.secure_backup/
+*.backup
 
 # Application logs
 logs/
